--- a/crystalclear/html/crystalclear-contained.html
+++ b/crystalclear/html/crystalclear-contained.html
@@ -716,7 +716,7 @@ h2 {
 <div class="divide"></div><div class="divide2"></div><div class="divide3"></div>
 <div class="title">
                         <!--- edit title here--->
-                            <h1>Fakehelper's</h1>
+                            <h1>Your Name's</h1>
                         <h2>Gif Pack Directory</h2>
 </div>
 <div class="choose-left">
