--- a/crystalclear/html/crystalclear-contained.html
+++ b/crystalclear/html/crystalclear-contained.html
@@ -697,7 +697,7 @@ h2 {
 <div class="choose-left">
 <div class="navigation">
       <!--- edit nav links here, use phosphor icons to change the icons!--->
-<a href="/" class="ph ph-house" title="Back to fakegifs"></a>
+<a href="/" class="ph ph-house" title="Back to yoururl"></a>
 <a href="/" class="ph ph-warning" title="Rules"></a>
 <a href="#" class="ph ph-lock-key-open" title="Request Server Access"></a>
 <a href="#" class="ph ph-shopping-cart" title="Commission Info"></a>
