--- a/crystalclear/html/crystalclear-contained.html
+++ b/crystalclear/html/crystalclear-contained.html
@@ -276,6 +276,11 @@ h2 {
     display:inline-block;
 }
 
+.navigation a:hover {
+    color:var(--second-txt-color);
+}
+          
+
 /*      CATEGORY FILTERS       */
 
 .cats {
