--- a/crystalclear/html/crystalclear-nocontainer.html
+++ b/crystalclear/html/crystalclear-nocontainer.html
@@ -276,6 +276,10 @@ h2 {
     display:inline-block;
 }
 
+.navigation a:hover {
+    color:var(--second-txt-color);
+}        
+
 /*      CATEGORY FILTERS       */
 
 .cats {
