--- a/crystalclear/html/crystalclear-simplified.html
+++ b/crystalclear/html/crystalclear-simplified.html
@@ -408,7 +408,7 @@ h2 {
 
 .item {
     width:var(--gif-width);
-    height:calc(var(--gif-height) + 146px);
+    height:calc(var(--gif-height) + 86px);
     border-radius:5px;
     border:1px solid var(--border-color);
     float:left;
@@ -480,6 +480,18 @@ h2 {
 }
 
 /* fc name */
+.name {
+    width:100%;
+    height:40px;
+    display:inline-block;
+    border-top:1px solid var(--border-color);
+    border-bottom:1px solid var(--border-color);
+        -webkit-transition: all .7s ease;
+        -moz-transition: all .7s  ease;
+        -o-transition: all .7s  ease;
+    transition: all .7s  ease;
+}
+
 .name h1{
     margin-top:10px;
     color:var(--accent);
@@ -492,14 +504,10 @@ h2 {
     text-transform:uppercase;
 }
 
-.name {
-    width:100%;
-    height:40px;
-    display:inline-block;
-    border-top:1px solid var(--border-color);
-    border-bottom:1px solid var(--border-color);
+.name:hover {
+    background-color:var(--main-txt-color);
+    
 }
-
 
 /* footage */
 
@@ -614,13 +622,13 @@ transition: all .7s  ease;
     font-family:"Karla";
     font-size:16px;
     text-align: center;
-    margin-top:30px;
+    margin-top:50px;
     text-transform:uppercase;
 }
 
 .twi p {
     width:calc(var(--gif-width) - 20px );
-    height:calc(var(--gif-height) - 30px );
+    height:auto;
     overflow:none;
     color:var(--main-txt-color);
     font-family:"Karla";
@@ -747,20 +755,8 @@ transition: all .7s  ease;
                      <!--- end content warnings ----->
 <div class="gif"><!--- add gif link here ----->
 <img src="https://placehold.co/245x160"></div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-
-<!--- extra details, if you want to delete this, change .item height to
-                 height:calc(var(--gif-height) + 156px);  ----->
-<!-- end extra details -->
-
-<!--- links or hovers start here, if you dont want it to be a link just remove the href="" part ----->
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-<!--<a class="ph ph-warning" title="a secret fourth option"></a>-->
-</div>
 </div>
 <!--- FINISH GIF PACK ----->  
 
@@ -779,21 +775,8 @@ transition: all .7s  ease;
                      <!--- end content warnings ----->
 <div class="gif"><!--- add gif link here ----->
 <img src="https://placehold.co/245x160"></div>
-<div class="name"><h1>Faceclaim Name</h1></div>
-
-<!--- extra details, if you want to delete this, change .item height to
-                 height:calc(var(--gif-height) + 156px);  ----->
-<!-- end extra details -->
-
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-
-<!--- links or hovers start here, if you dont want it to be a link just remove the href="" part ----->
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-<!--<a class="ph ph-warning" href="#" title="a secret fourth option"></a>-->
-</div>
 </div>
 <!--- FINISH GIF PACK ----->     
 
@@ -814,19 +797,8 @@ transition: all .7s  ease;
 <img src="https://placehold.co/100x100">
 <img src="https://placehold.co/100x100">
 </div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-
-<!--- extra details, if you want to delete this, change .item height to
-                 height:calc(var(--gif-height) + 156px);  ----->
-
-<!--- links or hovers start here, if you dont want it to be a link just remove the href="" part ----->
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-<!--<a class="ph ph-warning" title="a secret fourth option"></a>-->
-</div>
 </div>
 
 <!--- FINISH GIF ICON PACK ----->
@@ -848,18 +820,8 @@ transition: all .7s  ease;
 <img src="https://placehold.co/100x100">
 <img src="https://placehold.co/100x100">
 </div>
-<div class="name"><h1>Faceclaim Name</h1></div>
-<!--- extra details, if you want to delete this, change .item height to
-                 height:calc(var(--gif-height) + 156px);  ----->
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-
-<!--- links or hovers start here, if you dont want it to be a link just remove the href="" part ----->
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-<!--<a class="ph ph-warning" title="a secret fourth option"></a>-->
-</div>
 </div>
 
 <!--- FINISH GIF ICON PACK ----->
@@ -876,13 +838,8 @@ transition: all .7s  ease;
 <img src="https://placehold.co/100x100">
 <img src="https://placehold.co/100x100">
 </div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-</div>
 </div>
 
 <!--- FINISH GIF ICON PACK ----->
@@ -902,15 +859,8 @@ transition: all .7s  ease;
 <img src="https://placehold.co/100x100">
 <img src="https://placehold.co/100x100">
 </div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-<a class="ph ph-warning" title="a secret fourth option"></a>
-</div>
 </div>
 
 <!--- FINISH GIF ICON PACK ----->           
@@ -928,14 +878,8 @@ transition: all .7s  ease;
 </div>
 <div class="gif">
 <img src="https://placehold.co/245x160"></div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-    <a class="ph ph-warning" title="a secret fourth option"></a>
-</div>
 </div>
 
 <!--- FINISH GIF PACK ----->  
@@ -946,14 +890,8 @@ transition: all .7s  ease;
 <div class="item a c e one three">
 <div class="gif">
 <img src="https://placehold.co/245x160"></div>
-<div class="name"><h1>Faceclaim Name</h1></div>
+<a href="#"><div class="name"><h1>Faceclaim Name</h1></div></a>
 <div class="info"><p>Project Name</p></div>
-<div class="clickies">
-    <a class="ph ph-lock" title="title"></a>
-    <a class="ph ph-check" title="title two"></a>
-    <a class="ph ph-arrow-clockwise" href="/tagged/fc" title="link title"></a>
-    <a class="ph ph-warning" href="#" title="a secret fourth option"></a>
-</div>
 </div>
 <!--- FINISH GIF PACK ----->     
 
