--- a/crystalclear/html/crystalclear-simplified.html
+++ b/crystalclear/html/crystalclear-simplified.html
@@ -907,9 +907,6 @@ transition: all .7s  ease;
 
 
 <!--- isotope filtering  ----->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/fakethemes/gifpackpages@main/crystalclear/JS/filters.js"></script>
-
-</center></div> <!--end grid ---></div></body></html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script><script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script><script src="https://cdn.jsdelivr.net/gh/fakethemes/gifpackpages@main/crystalclear/JS/filters.js"></script></center></div> <!--end grid --->
+<div class="credit"><a class="ph-fill ph-sparkle" title="gif pack directory by fakehelper" href="https://fakehelper.tumblr.com/"></a></div><!--don't touch this pls it took me forever like plS donut do it-->    
+</div></body></html>
