--- a/goodthingsgobad/gifpages/html/light-popup.html
+++ b/goodthingsgobad/gifpages/html/light-popup.html
@@ -3,7 +3,7 @@
            good things go bad (light / pop up) by fakehelper
  
                     credits
-                    - google fonts (lora)
+                    - google fonts (karla)
                     - cappuccicons icon font
                     - tumblr controls by cyantists
                     - text hover/tw tutorial by the-art-of-web.com
