--- a/goodthingsgobad/gifpages/html/dark.html
+++ b/goodthingsgobad/gifpages/html/dark.html
@@ -3,7 +3,7 @@
               good things go bad (dark / no pop up) by fakehelper
  
                     credits
-                    - google fonts (lora)
+                    - google fonts (karla)
                     - tumblr controls by cyantists
                     - text hover/tw tutorial by the-art-of-web.com
                     
