--- a/goodthingsgobad/directories/html/light.html
+++ b/goodthingsgobad/directories/html/light.html
@@ -408,6 +408,7 @@ a, b {
     width:40px;
     height:40px;
     font-family:'karla';
+    color:var(--main-txt-color);
     font-weight:800;
     font-size:11px;
     text-transform:uppercase;
