--- a/goodthingsgobad/directories/html/light.html
+++ b/goodthingsgobad/directories/html/light.html
@@ -250,7 +250,7 @@ a, b {
     height:calc(var(--gif-height) + 160px); /* if removing any elements change height here */
     border-radius:5px;
     border:1px solid var(--border-color);
-    background-color:var(----card-bg);
+    background-color:var(--card-bg);
     float:left;
     margin: calc(var(--margins) / 2);
     z-index:1;
@@ -295,9 +295,7 @@ a, b {
     height:var(--gif-height);
     padding:none;
     margin:0 auto;
-        backdrop-filter: blur(2px);
-    background-color:rgba(250,250,250,0.1);
-    backdrop-filter: blur(30px);
+    background-color:var(--card-bg);
     border-radius:5px 5px 0px 0px;
     border-bottom:1px solid var(--border-color);
 }
