--- a/goodthingsgobad/directories/html/dark.html
+++ b/goodthingsgobad/directories/html/dark.html
@@ -466,7 +466,7 @@ a, b {
 </center></div>
 
 <div class="title">
-                            <h1>Fakehelper's</h1>
+                            <h1>Your Name's</h1>
                         <h2>Gif Pack Directory</h2>
                         
 </div><div class="line"></div></div><div class="arms"><center><div class="grid">
