--- a/goodthingsgobad/directories/html/light+filters.html
+++ b/goodthingsgobad/directories/html/light+filters.html
@@ -692,7 +692,7 @@ input[type="text"] {
 </center></div>
 
 <div class="title">
-                            <h1>Fakehelper's</h1>
+                            <h1>Your Name's</h1>
                         <h2>Gif Pack Directory</h2>
 
 <div class="searchhold"><div class="searchbar"><input type="text" class="quicksearch" placeholder="Search Gif Packs" /></div></div>                        
