--- a/crystalclear/html/crystalclear-simplified.html
+++ b/crystalclear/html/crystalclear-simplified.html
@@ -26,28 +26,14 @@
 <link href="https://static.tumblr.com/51fnf0s/BCoprzst5/style-my-tooltips.css" rel="stylesheet" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 <script src="https://static.tumblr.com/51fnf0s/lKGprzsse/jquery.style-my-tooltips.js"></script>
-<script>
-     (function($){
-         $(document).ready(function(){
-             $("[title]").style_my_tooltips({ 
-    tip_follows_cursor:true,
-    tip_delay_time:300,
-    tip_fade_speed:300,
-    attribute:"title"
-});
-         });
-     })(jQuery);
- </script>
+<script src="https://cdn.jsdelivr.net/gh/fakethemes/gifpackpages@latest/crystalclear/JS/style-my-tooltips.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fakethemes/gifpackpages@latest/crystalclear/CSS/simple.css">
 
 <!--- fonts --->
 <script src="https://unpkg.com/@phosphor-icons/web"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-
-<!-- css --->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fakethemes/gifpackpages@latest/crystalclear/CSS/simple.css">
-
 
 <style type="text/css">
 
