--- a/goodthingsgobad/gifpages/html/dark.html
+++ b/goodthingsgobad/gifpages/html/dark.html
@@ -249,6 +249,27 @@ a, b {
     border:1px solid var(--border-color);
 }
 
+  /* trigger warnings */
+.twb::before {
+    color:var(--main-txt-color);
+}
+
+.tws::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
+
+/* icon tws */
+
+.twb-icon::before {
+    color:var(--second-txt-color);
+}
+
+.tws-icon::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
+
 .branch h3 {
     color:var(--main-txt-color);
     font-family: 'karla', sans-serif;
