--- a/goodthingsgobad/gifpages/html/light-popup.html
+++ b/goodthingsgobad/gifpages/html/light-popup.html
@@ -236,6 +236,26 @@ a, b {
     text-align:center;
 }
 
+/* trigger warnings */
+.twb::before {
+    color:var(--main-txt-color);
+}
+
+.tws::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
+
+/* icon tws */
+
+.twb-icon::before {
+    color:var(--second-txt-color);
+}
+
+.tws-icon::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
 
 /* episode titles */
 .branch {
