--- a/goodthingsgobad/gifpages/html/light.html
+++ b/goodthingsgobad/gifpages/html/light.html
@@ -237,9 +237,26 @@ a, b {
     
 }
 
+/* trigger warnings */
+.twb::before {
+    color:var(--main-txt-color);
+}
 
+.tws::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
 
+/* icon tws */
 
+.twb-icon::before {
+    color:var(--second-txt-color);
+}
+
+.tws-icon::before {
+    color:var(--main-txt-color);
+    background-color:var(--accent);
+}
 
 /* episode titles */
 .branch {
