--- a/picturesofgirls/gifpage.html
+++ b/picturesofgirls/gifpage.html
@@ -138,11 +138,16 @@ h4 {
     padding:10px;
 }
 
-/* container */
+
+/* right container */
 .right {
     width:calc(30% - 20px);
-    margin-left:calc(70% + 10px);
+    margin-left:calc(70% + 22px);
+}
 
+.treetop {
+    left:-10px;
+}
 
 /* episode titles, change width if it's not long enough!!  */
 .branch {
