--- a/idleworship/idleworship.html
+++ b/idleworship/idleworship.html
@@ -110,7 +110,7 @@ a:hover {
     width:calc(100% - 40px);
     margin-top:0px;
     padding:10px 20px;
-    text-align;center;
+    text-align:center;
     display:block;
     position:relative;
 }
