--- a/idleworship/streamlined.html
+++ b/idleworship/streamlined.html
@@ -1,6 +1,6 @@
 <!--
                     
-                    idle worship (gif pack page #1) by fakehelper 
+            idle worship - streamlined (gif pack page #1) by fakehelper 
                     
                     credits 
                         - google fonts
