--- a/idleworship/dark.html
+++ b/idleworship/dark.html
@@ -1,6 +1,6 @@
 <!--
                     
-                    idle worship (gif pack page #1) by fakehelper 
+                idle worship - dark (gif pack page #1) by fakehelper 
                     
                     credits 
                         - google fonts
