--- a/idleworship/streamlined-light.html
+++ b/idleworship/streamlined-light.html
@@ -128,7 +128,7 @@ a:hover {
     width:calc(100% - 40px);
     margin-top:-20px;
     padding:10px 20px;
-    text-align;center;
+    text-align:center;
     display:block;
     position:relative;
 }
