--- a/goodthingsgobad/gifpages/html/light.html
+++ b/goodthingsgobad/gifpages/html/light.html
@@ -100,7 +100,7 @@ a, b {
     margin: 0 auto;
     width:600px;
     height:100px;
-    text-align;center;
+    text-align:center;
     position:relative;
     z-index:1;
     border:none;
